--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,32 @@
 body {
-  background-color: #60d9f1;
+  background-color: #white;
+  color: dimgray;
+}
+h1 {
+  color: #EA4335;
+}
+hr {
+  display: block;
+    height: 3px;
+    border: 0;
+    border-top: 3px solid #FBBC05;
+    margin: 1.5em 0;
+    padding: 0;
+  : #FBBC05;
+  height: 3px;
+}
+audio {
+  color: #4285F4;
+}
+input {
+  color: #4285F4;
+}
+img {
+  width: 100%;
+}
+form {
+  font-size: 5em;
+  width: 33%;
+}
+results {
 }
